Fix Webpack connection

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form class="form-horizontal" method="post">
+<form method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
@@ -13,17 +13,13 @@
             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
+
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    
-    <div class="form-group">
-    <label class="control-label col-sm-2" for="inputEmail">Email</label>
+    <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    </div>
-    
-    <div class="form-group">
-    <label class="control-label col-sm-2" for="inputPassword">Password</label>
+    <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-    </div>
+
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
@@ -33,7 +29,7 @@
         See https://symfony.com/doc/current/security/remember_me.html
 
         <div class="checkbox mb-3">
-            <label class="control-label col-sm-2">
+            <label>
                 <input type="checkbox" name="_remember_me"> Remember me
             </label>
         </div>
@@ -43,7 +39,7 @@
         Sign in
     </button>
 </form>
-<form class="form-horizontal" action="/register">
+<form action="/register">
     <button class="btn btn-lg btn-primary" type="submit">
         Or register
     </button>
